<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ve.com.mariomendoza.livelowcarb.ui.activitys.MainActivity$PlaceholderFragment"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/gadgets_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Emphasis"
                android:textSize="55sp"
                android:fontFamily="serif"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center">

                <!--Espacio en blanco entre las imagenes-->
                <!--Espacio en blanco entre las imagenes-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_go_to_bmr"
                        android:layout_width="122dp"
                        android:layout_height="122dp"
                        app:srcCompat="@drawable/imb" />

                    <!--Espacio en blanco entre las imagenes y el texto-->
                    <!--Espacio en blanco entre las imagenes y el texto-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bmr_text_title"
                            android:textColor="@android:color/background_light"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bmr_text"
                            android:textColor="@android:color/background_light" />

                    </LinearLayout>

                </LinearLayout>

                <!--Espacio en blanco entre las imagenes-->
                <!--Espacio en blanco entre las imagenes-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_go_to_whr"
                        android:layout_width="122dp"
                        android:layout_height="122dp"
                        app:srcCompat="@drawable/icc" />

                    <!--Espacio en blanco entre las imagenes y el texto-->
                    <!--Espacio en blanco entre las imagenes y el texto-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whr_text_title"
                            android:textColor="@android:color/background_light"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/whr_text"
                            android:textColor="@android:color/background_light" />
                    </LinearLayout>
                </LinearLayout>

                <!--Espacio en blanco entre las imagenes-->
                <!--Espacio en blanco entre las imagenes-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_go_to_bmi"
                        android:layout_width="122dp"
                        android:layout_height="122dp"
                        app:srcCompat="@drawable/imc" />

                    <!--Espacio en blanco entre las imagenes y el texto-->
                    <!--Espacio en blanco entre las imagenes y el texto-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bmi_text_title"
                            android:textColor="@android:color/background_light"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bmi_text"
                            android:textColor="@android:color/background_light" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
