<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="livelowcarb.livelowcarbapp.MainActivity$PlaceholderFragment"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/busqueda">

                <AutoCompleteTextView
                    android:layout_height="match_parent"
                    android:id="@+id/autoCompleteTextView"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_width="236dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="0.02"
                    android:background="@android:color/background_light" />

                <ImageButton
                    app:srcCompat="@drawable/lupa"
                    android:id="@+id/search"
                    android:scaleType="fitCenter"
                    android:layout_weight="0.01"
                    android:background="@android:color/transparent"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="Busqueda"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Basado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="5dp"
                    android:text="@string/based_on_text"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/foods"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/food_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/food"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/carbs"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/carbs_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/carb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/proteins"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/protein_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/protein"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/fats"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fat_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/fat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/calories"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/calories_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/calorie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.04"
                    android:text="@string/notation_value"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:theme="@style/switchllc" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- android:progressDrawable="@drawable/estiloseek" llamo al estilo personalizado que hice en los recursos -->
                <!-- @drawable/thumb" es el punto del seekbar-->
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="290"
                    android:progress="0"
                    android:progressDrawable="@drawable/estiloseek"
                    android:thumb="@drawable/thumb"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
